--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pomodoro-timer",
   "version": "0.1.0",
+  "homepage": "https://noamorilios.github.io/pomodoro-timer",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -28,6 +29,8 @@
     "workbox-streams": "^6.5.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -50,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
